--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,6 @@
 {
-    "python.autoComplete.extraPaths": ["./Section D Backend Development with Django/My_First_Project"],
+    "python.autoComplete.extraPaths": [
+        "./Section D Backend Development with Django/My_First_Project"
+    ],
+    "liveServer.settings.port": 5501,
 }
