es6 refresher done

--- a/Section E React for Frontend Development with Redux/ES6 Refresher/MyApp/package.json
+++ b/Section E React for Frontend Development with Redux/ES6 Refresher/MyApp/package.json
@@ -9,6 +9,8 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "module"
+  "type": "module",
+  "dependencies": {
+    "esm": "^3.2.25"
+  }
 }
-
